AC_PREREQ([2.68])
AC_INIT([fastMult], [1.0])
AC_REVISION([$Revision: 1.0 $])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_SILENT_RULES([yes])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/main/Makefile
  src/main/cpp/Makefile
])
AC_PREFIX_DEFAULT([/Users/andrea/Documents/homeWork/elp-project/StruttureDatiAlgoritmi/ch2-PC/fastMultInteger/build])
AC_OUTPUT
